add individual devit and charge an image with firestore

--- a/components/Devit/styles.module.css
+++ b/components/Devit/styles.module.css
@@ -3,6 +3,10 @@
   display: flex;
   padding: 10px 15px;
 }
+.article:hover {
+  background: #f5f8fa;
+  cursor: pointer;
+}
 
 .div {
   padding-right: 10px;
@@ -13,10 +17,16 @@
   margin: 0;
 }
 
-.date {
+.time {
   color: #555;
   font-size: 14px;
 }
+
+.time:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 .img {
   border-radius: 10px;
   height: auto;
